--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./img/credit-card.png" type="image/png">
     <title>Credit Card Creator</title>
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css" />
