--- a/index.html
+++ b/index.html
@@ -3,14 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./img/credit-card.png" type="image/png">
+    <link rel="shortcut icon" href="./img/credit-card.png" type="image/png" />
     <title>Credit Card Creator</title>
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css" />
     <!-- Javascript -->
     <script src="./js/app.js" defer></script>
+    <!-- External Library -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.0.2/cleave.min.js"
+      integrity="sha512-SvgzybymTn9KvnNGu0HxXiGoNeOi0TTK7viiG0EGn2Qbeu/NFi3JdWrJs2JHiGA1Lph+dxiDv5F9gDlcgBzjfA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+      defer
+    ></script>
   </head>
   <body>
-    <h1>Credit Card Creator</h1>
+    <main class="wrapper">
+      <div class="card">
+        <div class="card-front">
+          <img src="./img/bg-card-front.png" alt="Card front" />
+          <div class="card-front__data">
+            <img src="./img/card-logo.svg" alt="Card logo" />
+            <p class="card-number" id="card-number">0000 0000 0000 0000</p>
+            <div class="card-name-date">
+              <p class="card-name" id="card-name">Jane Appleseed</p>
+              <p class="card-date">
+                <span id="card-month">00</span>/<span id="card-year">00</span></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-back">
+          <img src="./img/bg-card-back.png" alt="Card back" />
+          <div class="card-back__data">
+            <p class="card-cvc" id="card-cvc">000</p>
+          </div>
+        </div>
+      </div>
+      <form class="form" id="form">
+        <div class="form-group">
+          <label for="input-name" class="label">Cardholder Name</label>
+          <input
+            type="text"
+            class="input"
+            id="input-name"
+            placeholder="e.g. Jane Appleseed"
+          />
+        </div>
+        <div class="form-group">
+          <label for="input-number" class="label">Card Number</label>
+          <input
+            type="text"
+            class="input"
+            id="input-number"
+            placeholder="e.g. 1234 5678 9123 0000"
+          />
+        </div>
+        <div class="form-group">
+          <div>
+            <label for="input-month" class="label">Exp. Date (MM/YY)</label>
+            <div>
+              <input type="text" class="input" id="input-month" placeholder="MM">
+              <input type="text" class="input" id="input-year" placeholder="YY">
+            </div>
+          </div>
+          <div>
+            <label for="input-cvc" class="label">CVC</label>
+            <input type="text" class="input" id="input-cvc" placeholder="e.g. 123">
+          </div>
+        </div>
+        <div class="form-group">
+          <button class="button" type="submit">Confirm</button>
+        </div>
+      </form>
+      <div class="thank-you">
+        <img src="./img/icon-complete.svg" alt="Complete icon">
+        <p class="thank-you-title">Thank you!</p>
+        <p class="thank-you-text">We've added your credit card details</p>
+        <button class="button">Continue</button>
+      </div>
+    </main>
   </body>
 </html>
