--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
           <img src="./img/bg-card-front.png" alt="Card front" />
           <div class="card-front__data">
             <img src="./img/card-logo.svg" alt="Card logo" />
-            <p class="card-number" id="card-number">0000 0000 0000 0000</p>
-            <div class="card-name-date">
-              <p class="card-name" id="card-name">Jane Appleseed</p>
-              <p class="card-date">
-                <span id="card-month">00</span>/<span id="card-year">00</span></p>
+            <div>
+              <p class="card-number" id="card-number">0000 0000 0000 0000</p>
+              <div class="card-name-date">
+                <p class="card-name" id="card-name">Jane Appleseed</p>
+                <p class="card-date">
+                  <span id="card-month">00</span>/<span id="card-year">00</span>
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -64,13 +67,28 @@
           <div>
             <label for="input-month" class="label">Exp. Date (MM/YY)</label>
             <div>
-              <input type="text" class="input" id="input-month" placeholder="MM">
-              <input type="text" class="input" id="input-year" placeholder="YY">
+              <input
+                type="text"
+                class="input"
+                id="input-month"
+                placeholder="MM"
+              />
+              <input
+                type="text"
+                class="input"
+                id="input-year"
+                placeholder="YY"
+              />
             </div>
           </div>
           <div>
             <label for="input-cvc" class="label">CVC</label>
-            <input type="text" class="input" id="input-cvc" placeholder="e.g. 123">
+            <input
+              type="text"
+              class="input"
+              id="input-cvc"
+              placeholder="e.g. 123"
+            />
           </div>
         </div>
         <div class="form-group">
@@ -78,7 +96,7 @@
         </div>
       </form>
       <div class="thank-you">
-        <img src="./img/icon-complete.svg" alt="Complete icon">
+        <img src="./img/icon-complete.svg" alt="Complete icon" />
         <p class="thank-you-title">Thank you!</p>
         <p class="thank-you-text">We've added your credit card details</p>
         <button class="button">Continue</button>
