Add Form CSS styles

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             placeholder="e.g. 1234 5678 9123 0000"
           />
         </div>
-        <div class="form-group">
-          <div>
+        <div class="form-group double">
+          <div class="rows">
             <label for="input-month" class="label">Exp. Date (MM/YY)</label>
-            <div>
+            <div class="columns">
               <input
                 type="text"
                 class="input"
@@ -81,7 +81,7 @@
               />
             </div>
           </div>
-          <div>
+          <div class="rows">
             <label for="input-cvc" class="label">CVC</label>
             <input
               type="text"
