--- a/index.html
+++ b/index.html
@@ -44,57 +44,60 @@
           </div>
         </div>
       </div>
-      <form class="form" id="form">
-        <div class="form-group">
-          <label for="input-name" class="label">Cardholder Name</label>
-          <input
-            type="text"
-            class="input"
-            id="input-name"
-            placeholder="e.g. Jane Appleseed"
-          />
-        </div>
-        <div class="form-group">
-          <label for="input-number" class="label">Card Number</label>
-          <input
-            type="text"
-            class="input"
-            id="input-number"
-            placeholder="e.g. 1234 5678 9123 0000"
-          />
-        </div>
-        <div class="form-group double">
-          <div class="rows">
-            <label for="input-month" class="label">Exp. Date (MM/YY)</label>
-            <div class="columns">
-              <input
-                type="text"
-                class="input"
-                id="input-month"
-                placeholder="MM"
-              />
-              <input
-                type="text"
-                class="input"
-                id="input-year"
-                placeholder="YY"
-              />
-            </div>
-          </div>
-          <div class="rows">
-            <label for="input-cvc" class="label">CVC</label>
+      <div class="form-wrapper">
+        <form class="form" id="form">
+          <div class="form-group">
+            <label for="input-name" class="label">Cardholder Name</label>
             <input
               type="text"
               class="input"
-              id="input-cvc"
-              placeholder="e.g. 123"
+              id="input-name"
+              placeholder="e.g. Jane Appleseed"
             />
           </div>
-        </div>
-        <div class="form-group">
-          <button class="button" type="submit">Confirm</button>
-        </div>
-      </form>
+          <div class="form-group">
+            <label for="input-number" class="label">Card Number</label>
+            <input
+              type="text"
+              class="input"
+              id="input-number"
+              placeholder="e.g. 1234 5678 9123 0000"
+            />
+          </div>
+          <div class="form-group double">
+            <div class="rows">
+              <label for="input-month" class="label">Exp. Date (MM/YY)</label>
+              <div class="columns">
+                <input
+                  type="text"
+                  class="input"
+                  id="input-month"
+                  placeholder="MM"
+                />
+                <input
+                  type="text"
+                  class="input"
+                  id="input-year"
+                  placeholder="YY"
+                />
+              </div>
+            </div>
+            <div class="rows">
+              <label for="input-cvc" class="label">CVC</label>
+              <input
+                type="text"
+                class="input"
+                id="input-cvc"
+                placeholder="e.g. 123"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <button class="button" type="submit">Confirm</button>
+          </div>
+        </form>
+      </div>
+
       <div class="thank-you">
         <img src="./img/icon-complete.svg" alt="Complete icon" />
         <p class="thank-you-title">Thank you!</p>
