--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <title>Credit Card Creator</title>
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css" />
-    <!-- Javascript -->
-    <script src="./js/app.js" defer></script>
     <!-- External Library -->
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.0.2/cleave.min.js"
-      integrity="sha512-SvgzybymTn9KvnNGu0HxXiGoNeOi0TTK7viiG0EGn2Qbeu/NFi3JdWrJs2JHiGA1Lph+dxiDv5F9gDlcgBzjfA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      src="https://unpkg.com/cleave-zen@0.0.17/dist/cleave-zen.umd.js"
       defer
     ></script>
+    <!-- Javascript -->
+    <script src="./js/app.js" defer></script>
   </head>
   <body>
     <main class="wrapper">
@@ -53,6 +50,8 @@
               class="input"
               id="input-name"
               placeholder="e.g. Jane Appleseed"
+              maxlength="24"
+              required
             />
           </div>
           <div class="form-group">
@@ -62,6 +61,8 @@
               class="input"
               id="input-number"
               placeholder="e.g. 1234 5678 9123 0000"
+              maxlength="19"
+              required
             />
           </div>
           <div class="form-group double">
@@ -73,12 +74,16 @@
                   class="input"
                   id="input-month"
                   placeholder="MM"
+                  maxlength="2"
+                  required
                 />
                 <input
                   type="text"
                   class="input"
                   id="input-year"
                   placeholder="YY"
+                  maxlength="2"
+                  required
                 />
               </div>
             </div>
@@ -89,6 +94,8 @@
                 class="input"
                 id="input-cvc"
                 placeholder="e.g. 123"
+                maxlength="3"
+                required
               />
             </div>
           </div>
@@ -96,13 +103,12 @@
             <button class="button" type="submit">Confirm</button>
           </div>
         </form>
-      </div>
-
-      <div class="thank-you">
-        <img src="./img/icon-complete.svg" alt="Complete icon" />
-        <p class="thank-you-title">Thank you!</p>
-        <p class="thank-you-text">We've added your credit card details</p>
-        <button class="button">Continue</button>
+        <div class="thank-you disabled" id="thank-you">
+          <img src="./img/icon-complete.svg" alt="Complete icon" />
+          <p class="thank-you-title">Thank you!</p>
+          <p class="thank-you-text">We've added your credit card details</p>
+          <button class="button" id="continue">Continue</button>
+        </div>
       </div>
     </main>
   </body>
